--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,8 +30,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: v1.${{ github.run_number }}
-        release_name: King of the Hill Bot
+        tag_name: ${{ github.run_number }}
+        release_name: Anti-Invis Bot
         draft: false
         prerelease: false
     - name: Upload Release Asset
@@ -41,6 +41,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: ./build/libs/King of the Hill Bot-1.0-all.jar
-        asset_name: King of the Hill Bot-1.0-all.jar
+        asset_path: ./build/libs/Anti-Invis Discord-1.0-all.jar
+        asset_name: Anti-Invis Discord-1.0-all.jar
         asset_content_type: application/jar
